# parallel-prefix-sum

./: CMakeLists.txt  benchmark.cppm  main.cpp
